--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "dependencies/NEventStore"]
 	path = dependencies/NEventStore
-	url = https://github.com/NEventStore/NEventStore.git
+	url = https://github.com/nympy/NEventStore
