--- a/src/NEventStore.Persistence.Sql.Tests/NEventStore.Persistence.Sql.Tests.csproj
+++ b/src/NEventStore.Persistence.Sql.Tests/NEventStore.Persistence.Sql.Tests.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NEventStore.Persistence.Sql.Tests</RootNamespace>
     <AssemblyName>NEventStore.Persistence.Sql.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
