--- a/src/NEventStore.Persistence.Sql/NEventStore.Persistence.Sql.csproj
+++ b/src/NEventStore.Persistence.Sql/NEventStore.Persistence.Sql.csproj
@@ -87,7 +87,13 @@
       <DependentUpon>OracleNativeStatements.resx</DependentUpon>
     </Compile>
     <Compile Include="SqlDialects\PagedEnumerationCollection.cs" />
+    <Compile Include="SqlDialects\PostgreSqlJsonDialect.cs" />
     <Compile Include="SqlDialects\PostgreSqlDialect.cs" />
+    <Compile Include="SqlDialects\PostgreSqlJsonStatements.Designer.cs">
+      <DependentUpon>PostgreSqlJsonStatements.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="SqlDialects\PostgreSqlStatements.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -134,6 +140,10 @@
     <EmbeddedResource Include="SqlDialects\OracleNativeStatements.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>OracleNativeStatements.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SqlDialects\PostgreSqlJsonStatements.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>PostgreSqlJsonStatements.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="SqlDialects\PostgreSqlStatements.resx">
       <Generator>ResXFileCodeGenerator</Generator>
