--- a/src/.nuget/NEventStore.Persistence.PostgreSql.nuspec
+++ b/src/.nuget/NEventStore.Persistence.PostgreSql.nuspec
@@ -1,22 +1,23 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>NEventStore.Persistence.Sql</id>
+    <id>NEventStore.Persistence.PostgreSql</id>
     <version>5.3</version>
-    <title>NEventStore SQL Persistence Plugin</title>
+    <title>NEventStore SQL Persistence Plugin for PostgreSql</title>
     <authors>NEventStore Dev Team</authors>
     <owners>NEventStore Dev Team</owners>
     <projectUrl>http://neventstore.org</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Additional persistence provider for NEventStore using SQL.</description>
+    <description>Additional persistence provider for NEventStore using PostgreSql with json serialization.</description>
     <summary>Sql persistence provider for NEventStore.</summary>
     <language>es-US</language>
-    <tags>events, event sourcing, cqrs, storage, persistence, database, sql</tags>
+    <tags>events, event sourcing, cqrs, storage, persistence, database, sql, json</tags>
     <dependencies>
       <dependency id="NEventStore" version="5.3" />
+      <dependency id="NEventStore.Persistence.Sql" version="5.3" />
     </dependencies>
   </metadata>
   <files>
-    <file src="publish-net451\plugins\persistence\sql\NEventStore.Persistence.SQL*.*" target="lib\net451"/>
+    <file src="publish-net451\plugins\persistence\sql\NEventStore.Persistence.PostgreSql*.*" target="lib\net451"/>
   </files>
 </package>
